--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"files.associations": {
 		"libft.h": "c",
 		"unistd.h": "c",
-		"history.h": "c"
+		"history.h": "c",
+		"minishell.h": "c"
 	}
 }
