--- a/libft/Makefile
+++ b/libft/Makefile
@@ -29,8 +29,8 @@ SRCS	=	ft_isalpha.c ft_isdigit.c ft_isalnum.c \
 			ft_lstdelone.c ft_lstiter.c ft_lstlast.c \
 			ft_lstmap.c ft_lstnew.c ft_lstsize.c \
 			ft_gnl.c ft_gnl_utils.c ft_strcmp.c \
-			ft_strncpy.c ft_strcpy.c \
-
+			ft_strncpy.c ft_strcpy.c ft_is_numeric.c \
+			ft_stricmp.c \
 OBJS	=	$(SRCS:.c=.o)
 
 CC	=	cc
