--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
   "files.associations": {
-    "libft.h": "c",
-    "unistd.h": "c",
-    "history.h": "c",
-    "minishell.h": "c"
-  },
+	"libft.h": "c",
+	"unistd.h": "c",
+	"history.h": "c",
+	"minishell.h": "c",
+	"sstream": "c"
+},
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
   "C_Cpp_Runner.debuggerPath": "gdb",
