--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/16 16:02:38 by wscherre          #+#    #+#              #
-#    Updated: 2025/01/02 17:27:22 by codespace        ###   ########.fr        #
+#    Updated: 2025/01/12 14:38:54 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -30,7 +30,7 @@ SRCS	=	ft_isalpha.c ft_isdigit.c ft_isalnum.c \
 			ft_lstmap.c ft_lstnew.c ft_lstsize.c \
 			ft_gnl.c ft_gnl_utils.c ft_strcmp.c \
 			ft_strncpy.c ft_strcpy.c ft_is_numeric.c \
-			ft_stricmp.c \
+			ft_stricmp.c ft_isspace.c \
 
 OBJS	=	$(SRCS:.c=.o)
 
